feat: integrate backend API with frontend Activity component
- Add backend API service layer (backendApi.ts)
- Update Activity component to fetch real transaction & prediction data
- Add CORS middleware to FastAPI backend
- Create start/stop scripts for easy deployment
- Update TypeScript types to match API responses
- Add comprehensive documentation

--- a/clerk-react/.env.example
+++ b/clerk-react/.env.example
@@ -1,3 +1,9 @@
+# Clerk Authentication
+VITE_CLERK_PUBLISHABLE_KEY=your_clerk_key_here
+
 # Capital One Nessie API Configuration
 VITE_NESSIE_API_KEY=your_api_key_here
 VITE_NESSIE_ACCOUNT_ID=your_account_id_here
+
+# BalanceIQ Backend API
+VITE_BACKEND_API_URL=http://localhost:8000
