--- a/clerk-react/package.json
+++ b/clerk-react/package.json
@@ -13,7 +13,8 @@
     "@clerk/clerk-react": "^5.53.8",
     "knotapi-js": "^1.0.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
