--- a/agent/package.json
+++ b/agent/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node photon.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +22,9 @@
     "@google/generative-ai": "^0.21.0",
     "@photon-ai/imessage-kit": "^1.1.3",
     "better-sqlite3": "^12.4.1",
+    "cors": "^2.8.5",
     "dedalus-labs": "^0.1.0-alpha.4",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2"
   }
 }
