--- a/agent/package.json
+++ b/agent/package.json
@@ -21,10 +21,13 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@photon-ai/imessage-kit": "^1.1.3",
+    "axios": "^1.13.2",
     "better-sqlite3": "^12.4.1",
     "cors": "^2.8.5",
     "dedalus-labs": "^0.1.0-alpha.4",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "openai": "^6.8.1"
   }
 }
